--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Model\\":"./models",
-            "MVC\\":"./",
-            "Controllers\\":"./controllers" 
+            "Model\\": "models/",
+            "Controllers\\": "controllers/"
         }
     }
 }
